<resources>
    <string name="app_name">CRACKER</string>
    <string name="detect">DETECT</string>
    <string name="start_detection">START DETECTION</string>
    <string name="request_permission">CRACKER 사용을 위해 권한을 모두 허용해주세요.</string>
    <string name="scheme_package">package</string>
    <string name="history">HISTORY</string>
    <string name="dot_map">DOT MAP</string>
    <string name="histogram">HISTOGRAM</string>
    <string name="cracker">CRACKER</string>
    <string name="background_image">Background Image</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_interence_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>
    <string name="tv_default_inference_time">0ms</string>
    <string name="tv_default_threads_value">2</string>
    <string name="btn_record">RECORD</string>
    <string name="version">v1.0.0</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
</resources>