<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.main.MainActivity">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"
            android:src="@drawable/cracker_background" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cracker"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toTopOf="@id/btn_detect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_detect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/detect"
            app:chainUseRtl="true"
            app:layout_constraintBottom_toTopOf="@id/btn_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.7" />

        <Button
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/history"
            app:layout_constraintBottom_toTopOf="@id/btn_heatmap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_detect"
            app:layout_constraintWidth_percent="0.7" />

        <Button
            android:id="@+id/btn_heatmap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/heatmap"
            app:layout_constraintBottom_toTopOf="@id/btn_histogram"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_history"
            app:layout_constraintWidth_percent="0.7" />

        <Button
            android:id="@+id/btn_histogram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/histogram"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_heatmap"
            app:layout_constraintWidth_percent="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>